--- a/src/sites/index.html
+++ b/src/sites/index.html
@@ -72,23 +72,18 @@
                 <div class="data-group">
                     <div class="data-item">
                         <img data-original="/assets/images/data-dapps.png" alt="">
-                        <p class="value">-</p>
+                        <p class="value">68</p>
                         <p class="name">DApps</p>
                     </div>
-                    <div class="data-item">
-                        <img data-original="/assets/images/data-users.png" alt="">
-                        <p class="value">-</p>
-                        <p class="name">DAU</p>
-                    </div>
-                    <div class="data-item">
+                    <div class="data-item contract">
                         <img data-original="/assets/images/data-contracts.png" alt="">
                         <p class="value">-</p>
                         <p class="name">Smart Contracts</p>
                     </div>
-                    <div class="data-item">
+                    <div class="data-item tx">
                         <img data-original="/assets/images/data-transactions.png" alt="">
                         <p class="value">-</p>
-                        <p class="name">Transactions</p>
+                        <p class="name">Smart Contract Txs</p>
                     </div>
                 </div>
             </div>
