fix: update carousel

--- a/src/sites/index.html
+++ b/src/sites/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header fixed-top">
         <div class="header-content">
-            <div class="logo"><img data-original="/assets/images/logo.png" alt="">Neo DApp</div>
+            <div class="logo"><img data-original="/assets/images/logo.png" alt="">Neo DApps</div>
             <nav class="nav flex-column flex-sm-row">
                 <a class="text-sm-center nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
                     aria-controls="home" aria-selected="true">Home</a>
@@ -43,9 +43,9 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <a href="http://neonext2019.mikecrm.com/Ibi3iml" target="_blank">
+                        <!-- <a href="http://neonext2019.mikecrm.com/Ibi3iml" target="_blank"> -->
                             <img src="/assets/images/carousel-1.jpg" class="d-block w-100" alt="...">
-                        </a>
+                        <!-- </a> -->
                     </div>
                     <!-- <div class="carousel-item">
                         <img src="http://code.z01.com/img/2016instbg_02.jpg" class="d-block w-100" alt="...">
@@ -312,7 +312,7 @@
                     <img data-original="/assets/images/title-right.png" alt="">
                 </div>
                 <div class="github-group">
-                    <a href="https://neonext.io/" target="_blank">Neo-Next</a>
+                    <a href="https://neonext.io/" target="_blank">Neo-NEXT</a>
                     <a href="https://neo-one.io" target="_blank">NEO·ONE</a>
                     <a href="http://cityofzion.io/" target="_blank">City of Zion</a>
                     <a href="https://github.com/neo-project" target="_blank">The Neo Project</a>
