--- a/src/sites/index.html
+++ b/src/sites/index.html
@@ -38,30 +38,12 @@
             <div id="carouselExampleIndicators" class="carousel" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <!-- <li data-target="#carouselExampleIndicators" data-slide-to="1"></li> -->
-                    <!-- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <!-- <a href="http://neonext2019.mikecrm.com/Ibi3iml" target="_blank"> -->
-                            <img src="/assets/images/carousel-1.jpg" class="d-block w-100" alt="...">
-                        <!-- </a> -->
+                        <img src="/assets/images/carousel-1.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <!-- <div class="carousel-item">
-                        <img src="http://code.z01.com/img/2016instbg_02.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="http://code.z01.com/img/2016instbg_03.jpg" class="d-block w-100" alt="...">
-                    </div> -->
                 </div>
-                <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a> -->
             </div>
             <div class="data">
                 <p class="title">
@@ -226,13 +208,6 @@
                     </a>
                 </div>
             </div>
-            <!-- <div class="dapp-data">
-                <p class="title">
-                    <img data-original="/assets/images/title-left.png" alt="">
-                    Dapp Data
-                    <img data-original="/assets/images/title-right.png" alt="">
-                </p>
-            </div> -->
             <div class="other-websites">
                 <p class="title">
                     <img data-original="/assets/images/title-left.png" alt="">
@@ -303,6 +278,43 @@
                             </a>
                         </div>
                     </div>
+                    <div class="other-websites-item">
+                        <img data-original="/assets/images/other-websites-neow3j.png" alt="">
+                        <div class="hover-content">
+                            <a href="https://neow3j.io/#/" target="_blank">
+                                <p>NEXT</p>
+                                <img src="/assets/images/other-websites-next-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="other-websites-item">
+                        <img data-original="/assets/images/other-websites-alien.png" alt="">
+                        <div class="hover-content">
+                            <a href="https://github.com/alienworks" target="_blank">
+                                <p>NEXT</p>
+                                <img src="/assets/images/other-websites-next-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="other-websites-item">
+                        <img data-original="/assets/images/other-websites-neoresearch.png" alt="">
+                        <div class="hover-content">
+                            <a href="https://neoresearch.io/" target="_blank">
+                                <p>NEXT</p>
+                                <img src="/assets/images/other-websites-next-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="other-websites-item">
+                        <img data-original="/assets/images/other-websites-ngd.png" alt="">
+                        <div class="hover-content">
+                            <a href="https://marketplace.visualstudio.com/items?itemName=ngd-seattle.neo-blockchain-toolkit"
+                                target="_blank">
+                                <p>NEXT</p>
+                                <img src="/assets/images/other-websites-next-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="github">
@@ -316,7 +328,7 @@
                     <a href="https://neo-one.io" target="_blank">NEO·ONE</a>
                     <a href="http://cityofzion.io/" target="_blank">City of Zion</a>
                     <a href="https://github.com/neo-project" target="_blank">The Neo Project</a>
-                    <a href="https://github.com/neo-ngd/" target="_blank">NEO GLOBAL DEVELOPMENT</a>
+                    <a href="https://github.com/neo-ngd/" target="_blank">Neo Global Development</a>
                     <a href="https://github.com/keymakers" target="_blank">NEO Keymakers Japan</a>
                     <a href="https://github.com/Red4Sec/" target="_blank">Red4Sec</a>
                     <a href="https://github.com/NeoResearch" target="_blank">Neo Research</a>
@@ -1154,33 +1166,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="dapp-item">
-                        <img data-original="/assets/images/dapp/EPIPHANY.png">
-                        <div>
-                            <p class="name">EPIPHANY.IO</p>
-                            <button class="team">
-                                by
-                                <a href="http://www.epnex.io/" target="_blank">EPIPHANY Limited</a>
-                            </button>
-                            <p class="description">
-                                Epiphany (epnex.io) is a UNIQUE exchange platform for digital assets. With innovative
-                                high
-                                security, user friendly features
-                                and brokerage service, EPIPHANY aims to revolutionize the current blockchain trading
-                                system.
-                            </p>
-                            <div class="link">
-                                <a href="http://www.epnex.io/" target="_blank">Website</a>
-                                <a href="https://www.reddit.com/r/EPNex/" target="_blank">reddit</a>
-                                <a href="https://www.youtube.com/channel/UCmyi3GvcNJwr_sSvCTg3eBA?view_as=subscriber"
-                                    target="_blank">youtube</a>
-                                <a href="https://twitter.com/@EPNex" target="_blank">twitter</a>
-                                <a href="https://www.facebook.com/EPNex.io/" target="_blank">facebook</a>
-                                <a href="https://www.linkedin.com/company/epnex/" target="_blank">linkedin</a>
-                                <a href="https://github.com/nerodeveloper/EPN" target="_blank">Github</a>
-                            </div>
-                        </div>
-                    </div> -->
                     <div class="dapp-item">
                         <img data-original="/assets/images/dapp/Spotcoin.png">
                         <div>
@@ -1986,8 +1971,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="tab-pane fade show" id="wallet" role="tabpanel" aria-labelledby="wallet-tab">
-        </div> -->
         <div class="tab-pane fade show" id="explorer" role="tabpanel" aria-labelledby="explorer-tab">
             <div class="net main-net">
                 <p class="title">
