--- a/src/sites/index.html
+++ b/src/sites/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="/assets/lib/jquery/jquery.min.js"></script>
     <script src="/assets/lib/jquery_lazyload/jquery.lazyload.min.js"></script>
