--- a/src/sites/index.html
+++ b/src/sites/index.html
@@ -40,13 +40,19 @@
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/assets/images/carousel-1.jpg" class="d-block w-100" alt="...">
+                        <a href="https://neotube.io/translate" target="_blank">
+                            <img src="/assets/images/carousel-1.jpg" class="d-block w-100" alt="...">
+                        </a>
                     </div>
                     <div class="carousel-item">
                         <img src="/assets/images/carousel-2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/images/carousel-3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
             </div>
